# pptk

./: .buildinfo  CMakeCache.linux.txt  CMakeCache.mac.txt  CMakeCache.win.txt  CMakeLists.txt  LICENSE  README.md  __init__.py  contributing.html  genindex.html  index.html  install.html  objects.inv  processing.html  py-modindex.html  quickstart.html  search.html  searchindex.js  setup.py  tutorial.html  viewer.html
_sources/: contributing.rst.txt  index.rst.txt  install.rst.txt  processing.rst.txt  quickstart.rst.txt  tutorial.rst.txt  viewer.rst.txt
_sources/tutorials/viewer/: geolife.rst.txt  semantic3d.rst.txt  tanks_and_temples.rst.txt
_static/: basic.css  documentation_options.js
_static/css/: custom.css
cmake/: CopyAppleDependencies.cmake  CopyLinuxDependencies.cmake  CopyWindowsDependencies.cmake  FindEigen.cmake  FindNumpy.cmake  FindTBB.cmake  UsefulMacros.cmake
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  install.rst  quickstart.rst  tutorial.rst  viewer.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: layout.html
docs/source/tutorials/viewer/: building_footprints.rst  geolife.rst  mobius.rst  saddle.rst  semantic3d.rst  tanks_and_temples.rst
examples/: laplacian_deformation.py  region_growing.py  sph.py
examples/profile_estimate_normals/: profile_estimate_normals.py
licenses/: CMakeLists.txt  COPYING.apache2.txt  COPYING.gcc_rle31.txt  COPYING.gpl3.txt  COPYING.lgpl3.txt  LICENSE.linux.txt  LICENSE.mac.txt  LICENSE.win.txt
points/: expr.py
points/Examples/: estimate_normals.py  icp.py
points/Examples/profile_estimate_normals/: sweep_profile_estimate_normals.py
points/KdTree/: Makefile_osx  kdtree_wrapper.cpp  python_util.h
points/KdTree/Code/: Accumulator.h  Builder.h  BuilderParallel.h  BuilderSerial.h  PointKdTree.h  PointKdTree_decl.h  ResultSet.h  Traverser.h  TraverserBBF.h  TraverserBatched.h  TraverserBatchedDF.h  TraverserDF.h  TraverserInterleaved.h
points/KdTree/UsefulHeaders/vltools/: Stack.h  box3.h  fileio.h  floatcast.h  matsofvecs.h  pq.h  readme.txt  shortvecs.h  smallestk.h  timer.h
points/KdTree/src/: box.h  kdtree-impl.h  kdtree.h
points/Tests/: test_points.py
points/python_c_api_tests/: Makefile.nmake  test_vfuncs.py  vfuncs.cpp
pptk/: CMakeLists.txt  __init__.py  _add_path.py
pptk/include/: pptk_dll_export.h  progress_bar.h  timer.h
pptk/kdtree/: CMakeLists.txt  Makefile.nmake  kdtree_wrapper.cpp
pptk/kdtree/src/: kdtree-impl.h
pptk/libs/: CMakeLists.txt
pptk/libs/qt_plugins/: CMakeLists.txt
pptk/libs/qt_plugins/xcbglintegrations/: CMakeLists.txt
pptk/points/: CMakeLists.txt  expr.py  points.py
pptk/processing/: CMakeLists.txt
pptk/processing/estimate_normals/: CMakeLists.txt  Makefile.nmake  estimate_normals.cpp
pptk/vfuncs/: Makefile  Makefile_osx  foo.cpp  implied_for_loops.py
pptk/viewer/: CMakeLists.txt  background.h  comm_funcs.h  floor_grid.h  look_at.h  qt.conf  qt_camera.h  splines.h  text.h  viewer.pro  viewer.py
processing/estimate_normals/: estimate_normals.cpp
pypcl/: CMakeLists.txt  __init__.py
pypcl/include/: progress_bar.h  pypcl_dll_export.h  python_util.h
pypcl/kdtree/: CMakeLists.txt  Makefile  kdtree_wrapper.cpp
pypcl/kdtree/src/: accumulator.h  node.h  small_node.h
pypcl/libs/: CMakeLists.txt
pypcl/libs/qt_plugins/: CMakeLists.txt
pypcl/points/: CMakeLists.txt  __init__.py  expr.py  parmap.py  points.py
pypcl/processing/estimate_normals/: CMakeLists.standalone.txt  CMakeLists.txt  estimate_normals.cpp
pypcl/vfuncs/: CMakeLists.txt  vfuncs.cpp
pypcl/viewer/: CMakeLists.standalone.txt  CMakeLists.txt  Camera.h  CommFuncs.h  FloorGrid.h  PointAttributes.h  PointCloud.h  QtCamera.h  SelectionBox.h  Viewer.h  __init__.py  box3.h  camera.h  camera_dolly.h  main.cpp  octree.h  opengl_funcs.h  point_attributes.h  point_cloud.h  selection_box.h  timer.h  viewer.h  viewer.pro  viewer.pro.macosx  viewer.py
tests/: test_estimate_normals.py  test_expr.py  test_points.py  test_vfuncs.py
tutorials/viewer/: building_footprints.html  geolife.html  mobius.html  saddle.html  semantic3d.html  tanks_and_temples.html
viewer/: Background.h  CMakeLists.txt  CameraDolly.h  LookAt.h  OpenGLFuncs.h  Splines.h  Text.h  Viewer.h  main.cpp  viewer.pro  viewer.pro.macosx
